--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,13 +1,9 @@
-location /YNH_PATH {
-       alias /var/www/openid/ ;
+location YNH_PATH {
+       alias /var/www/openidldap/ ;
        if ($scheme = http) {
            rewrite ^ https://$server_name$request_uri? permanent;
        }
        index index.php;
-       #try_files $uri $uri/ /YNH_PATH/index.php?user=$uri&$args;
-       #try_files $uri $uri/ index.php;
-       #location ~ [^/]\.php(/|$) {
-       
        location ~* .php$ {
            fastcgi_split_path_info ^(.+?\.php)(/.*)$;
            fastcgi_pass unix:/var/run/php5-fpm.sock;
@@ -17,4 +13,4 @@ location /YNH_PATH {
            fastcgi_param PATH_INFO   $fastcgi_path_info;
        }
 }
-rewrite ^/YNH_PATH/([A-Za-z0-9]+)$ https://$server_name/YNH_PATH/index.php?user=$1 break;
+rewrite ^YNH_PATH/([A-Za-z0-9]+)$ https://$server_nameYNH_PATH/index.php?user=$1 break;
